src/static/static/css/new_interests.css
.category h2{
	text-align: left;
	padding-left:20px;
	padding-bottom:10px;
	color:#1fbad6;
	border-bottom:2px solid #1fbad6;
}
.category{
	margin-top:50px;
	text-align: left;
	display:block;
}
#interest.col-sm-4{
	display:inline-block;
	width:33%;
	height:120px;
	min-width:200px;
}
#like{
	width:100px!important;
}
.liked{
	width:100px!important;
	background-color:#5ad75a!important;
	color: #FFF;
	cursor: pointer;
	border: 1px solid #CCC;
	border-radius: 4px;
	margin-top: 20px;
	padding: 4px 10px;
	z-index: 1000;
	line-height: 1.33;
	font-size:18px;
}
.liked:hover, .liked:focus, .liked:active{
	box-shadow: 0px 0px 0px 2px #FFF, 0px 0px 0px 3px #5ad75a;
}
.infinite{
	width:100%;
	height:150px;
	display:block;
	z-index:1000;
}
.col-sm-4{
	float:none;
	position:static;
}
.infinite a{
	color:black!important;
}
.category_hidden{
	display:none;
}
.category_hidden .category_name{
	margin-left:100px;
}

/* Questions */

#big_wrapper{
	text-align: center;
}
.pager li > a{
	padding:0px 0px!important;
}
.pagination{
	margin:0 0;
}
#one input{
	visibility: hidden;
}
.subcategory{
	border-bottom:1px solid #1fbad6;
	display:none;
	margin-left:100px!important;
}

